# VkWrapper

./: .gitignore  CMakeLists.txt  LICENSE  LibraryVersion.inc.in  README.MD
cmake/: VkWrapperConfig.cmake  find_dependencies.cmake  find_vulkan.cmake  find_vulkan_sdk.cmake  generate_export_configuration.cmake
include/: Allocation.hpp  Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  Common.hpp  DescriptorSet.hpp  Device.hpp  Exception.hpp  Fence.hpp  FrameBuffer.hpp  Image.hpp  Instance.hpp  Library.hpp  Pipeline.hpp  Queue.hpp  RenderPass.hpp  Sampler.hpp  Semaphore.hpp  Shader.hpp  Surface.hpp  SwapChain.hpp  SymbolTable.hpp  VertexBuffer.hpp  VulkanFunctionList.hpp
include/vkw/: Allocation.hpp  Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  Common.hpp  DescriptorPool.hpp  DescriptorSet.hpp  Device.hpp  Exception.hpp  Extensions.hpp  Fence.hpp  FrameBuffer.hpp  HostAllocator.hpp  Image.hpp  Instance.hpp  Layers.hpp  Library.hpp  PhysicalDevice.hpp  Pipeline.hpp  PipelineCache.hpp  Query.hpp  Queue.hpp  RangeConcepts.hpp  ReferenceGuard.hpp  RenderPass.hpp  SPIRVModule.hpp  Sampler.hpp  Semaphore.hpp  Shader.hpp  StagingBuffer.hpp  Surface.hpp  SwapChain.hpp  SymbolTable.hpp  UniformBuffer.hpp  UniqueVulkanObject.hpp  Validation.hpp  VertexBuffer.hpp  VulkanTypeTraits.hpp
scripts/: generate_device_feature_classes.py  generate_device_feature_map.py  generate_headers.py  generate_layer_map.py  generate_type_constructors.py
source/: Allocation.cpp  Buffer.cpp  CMakeLists.txt  CommandBuffer.cpp  CommandPool.cpp  DescriptorPool.cpp  DescriptorSet.cpp  Device.cpp  Exception.cpp  Fence.cpp  FrameBuffer.cpp  HostAllocator.cpp  Image.cpp  Instance.cpp  Internal.cpp  Library.cpp  PhysicalDevice.cpp  Pipeline.cpp  PipelineCache.cpp  Query.cpp  Queue.cpp  RenderPass.cpp  SPIRVModule.cpp  Sampler.cpp  Semaphore.cpp  Shader.cpp  Surface.cpp  SwapChain.cpp  Utils.hpp  Validation.cpp  Validation.hpp  VulkanTypeTraits.cpp  vma_allocator_impl.cpp
source/loader/: CMakeLists.txt  DynamicLoader.cpp  DynamicLoader.hpp
